[tool.poetry]
name = "remme-client-python"
version = "0.1.1"
description = "Python Interface for Distributed Public Key Infrastructure (PKI) protocol"
authors = ["REMME"]
readme = "README.rst"
homepage = "https://remme.io/"
repository = "https://github.com/Remmeauth/remme-client-python"
documentation = "https://docs.remme.io/"

[tool.poetry.dependencies]
python = "^3.6"
sawtooth-signing = "1.0.1"
aiohttp = "3.2.1"
aiohttp_json_rpc = "^0.11.2"
sawtooth-sdk = "^1.0"
cbor = "^1.0"
protobuf = "^3.6"
cryptography = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
